fix: attach Mockito's agent at launch instead of self-attaching (#160)
Mockito 5's inline mock maker needs a JVM agent and self-attaches on first
use. Under maxParallelForks=4 the four test JVMs race that self-attach; the
loser takes down every mock-using test in its fork with "cannot mock this
class" rather than a real assertion failure. 30 of ~62 test classes use
Mockito, so the fallout looked like scattered, unreproducible RED across
unrelated subsystems -- and each occurrence cost a rerun cycle.

Confirmed rather than assumed: a test run on main logs "Mockito is currently
self-attaching to enable the inline-mock-maker" plus the JDK's "A Java agent
has been loaded dynamically" warning. Both are gone now.

Supplying the jar via -javaagent removes the self-attach. The version is
deliberately omitted so the Boot BOM keeps the agent aligned with the
mockito-core already on the test classpath.

-XX:-EnableDynamicAgentLoading is the regression guard. Without it, deleting
the agent wiring would silently restore self-attach: green build, flake
quietly back. Verified by removing the -javaagent line -- 5 of 5 tests failed
deterministically instead of flaking once in a while.

CLAUDE.md previously named PollerFlowTest as "the usual suspect" for any
rerun-passes failure. With two distinct flakes that guidance mislabels this
one, so it now splits them by exception type.